results/SVCOMP/4-shot/log-Hanoi-2024_03_18_23_40_29.txt
class Hanoi {
    static int counter = 0;
    
    //@ requires n >= 1;
    //@ ensures \result == 2^n - 1;
    static int hanoi(int n) {
        if (n == 1) {
            return 1;
        }
        return 2 * (hanoi(n - 1)) + 1;
    }
    
    //@ requires n >= 0;
    //@ requires from != to && from != via && to != via;
    //@ ensures counter == 2^n - 1;
    static void applyHanoi(int n, int from, int to, int via) {
        if (n == 0) {
            return;
        }
        counter++;
        applyHanoi(n - 1, from, via, to);
        applyHanoi(n - 1, via, to, from);
    }
}
/home/max/Documents/JMLGPT/tmp/Hanoi.java:5: error: bad operand types for binary operator '^'
    //@ ensures \result == 2^n - 1;
                            ^
  first type:  boolean
  second type: int
/home/max/Documents/JMLGPT/tmp/Hanoi.java:15: error: bad operand types for binary operator '^'
    //@ ensures counter == 2^n - 1;
                            ^
  first type:  boolean
  second type: int
2 errors

